Fix: Clear Library tooltip is unreadable.

--- a/src/client/styles/daw/patch-library/patch-library.styl
+++ b/src/client/styles/daw/patch-library/patch-library.styl
@@ -33,5 +33,6 @@
 
 	#libActions
 		display: inline-block
-		position: absolute;
-		right: 103px;
+		position: absolute
+		right: 69px
+		width: 200px
